# uefi-gpt-img-creator

./: .gitignore  CMakeLists.txt  README.md  cppefi.efi  image.sh  main.c  qemu.sh  startup.nsh
efi_hello/: CMakeLists.txt  efi.c
include/: compiler.h  const.h  esp.h  fat32.h  gpt.h  log.h  mbr.h  utils.h
pkg/: shellx64.efi
src/: esp.c  fat32.c  log.c  utils.c
